--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
-    "name": "Pikachu",
-    "description": "Pikachu - Whatsapp Bot",
-    "logo": "https://i.imgur.com/W0i7oMY.jpeg",
+    "name": "abdo_jfp",
+    "description": "abdo_jfp- Whatsapp Bot",
+    "logo": "https://i.ibb.co/XZNNBKk/images.jpg",
     "keywords": ["whatsapp", "userbot", "Asena", "WhatsAsena", "bot", "api", "ai"],
-    "repository": "https://github.com/ameer-kallumthodi/pikachu",
-    "website":   "https://t.me/phaticusthiccy",
-    "success_url": "https://t.me/AsenaSupport",
+    "repository": "https://github.com/abdo000ho/zhsigsost",
+    "website":   "https://t.me/+TT7JSOn-k8k4NGQ0",
+    "success_url": "https://t.me/+TT7JSOn-k8k4NGQ0",
     "stack": "container",
     "env": {
         "CONNECTION_CODE": {
@@ -181,7 +181,7 @@
         "GAN_IMAGE": {
             "description": "Gan Style eklentisi için resim bağlantısı yazın. Type image link for Gan Style plugin.",
             "required": true,
-            "value": "https://i.hizliresim.com/loUtAb.jpg"
+            "value": "https://i.ibb.co/XZNNBKk/images.jpg"
         },
         "NO_ONLINE": {
             "description": "Çevrimiçi görünmek istemiyorsanız true yazın. Type true if you don't want to appear online.",
